--- a/app/application/index/view/upgrade/create_order.html
+++ b/app/application/index/view/upgrade/create_order.html
@@ -85,12 +85,12 @@
 						<img src="<{:config('skin_path')}>/images/vml.png" alt="lianyin" class="pay_type">
 						</label>
 					</div>
-					<!--<div class="mui-input-row mui-radio mui-left" style="margin:10px 0;">-->
-					<!--	<label for="yingfu">-->
-					<!--	<input name="pay_type" type="radio" value="yingfu" id="yingfu" style="margin-top:15px;">-->
-					<!--		<img src="<{:config('skin_path')}>/images/fuHui.png" alt="lianyin" class="pay_type">-->
-					<!--	</label>-->
-					<!--</div>-->
+					<div class="mui-input-row mui-radio mui-left" style="margin:10px 0;">
+						<label for="yingfu">
+						<input name="pay_type" type="radio" value="yingfu" id="yingfu" style="margin-top:15px;">
+							<img src="<{:config('skin_path')}>/images/fuHui.png" alt="lianyin" class="pay_type">
+						</label>
+					</div>
 					<div class="mui-input-row mui-radio mui-left" style="margin:10px 0;">
 						<label for="gold">
 						<input name="pay_type" type="radio" value="gold" id="gold" style="margin-top:22px;">
