--- a/app/public/static/mobile/css/login.css
+++ b/app/public/static/mobile/css/login.css
@@ -1,7 +1,7 @@
 .login-body{
 	width: 100%;
 
-	background: url("../images/logo-bg.jpg") 0 0 no-repeat;
+	background: url("../images/login-bg.jpg") 0 0 no-repeat;
 	background-size: 100%;
 	padding-top: 70%;
 }
