添加cropy非本地通道

--- a/app/application/index/view/payment/lianyin.html
+++ b/app/application/index/view/payment/lianyin.html
@@ -28,6 +28,7 @@
                                 </div>
                                 <input type="text" class="form-control" name="product" id="product" value="<{$order.oid}>" required readonly>
                                 <input type="hidden" name="oid" value="<{$order.oid}>">
+                                <input type="hidden" name="pay_type" value="<{$order.pay_type}>">
                             </div>
                         </div>
                     </div>
