--- a/app/application/index/view/recharge/index.html
+++ b/app/application/index/view/recharge/index.html
@@ -78,13 +78,16 @@
                         <img src="<{:config('skin_path')}>/images/vml.png" alt="lianyin" class="pay_type active">
                     </div>
                     <div class="mui-col-sm-6 mui-col-xs-6">
+                        <img src="<{:config('skin_path')}>/images/vm.png" alt="lianyin2" class="pay_type">
+                    </div>
+                    <div class="mui-col-sm-6 mui-col-xs-6">
                         <img src="<{:config('skin_path')}>/images/fuHui.png" alt="yingfu" class="pay_type">
                     </div>
                 </div>
             </div>
         </div>
         <input type="hidden" name="select_money" value="200">
-        <input type="hidden" name="pay_way" value="lianyin">
+        <input type="hidden" name="pay_method" value="lianyin">
         <button type="submit" class="mui-btn mui-btn-blue mui-btn-block" style="width:90%;margin:0 auto;" id="sub">
             <{:lang('submit')}>
         </button>
@@ -99,7 +102,7 @@
             $(".pay_type").removeClass("active");
             $(this).addClass("active");
             var pay_name = $(this).attr("alt");
-            $("input[name='pay_way']").val(pay_name);
+            $("input[name='pay_method']").val(pay_name);
         });
     });
 $(function () {
