--- a/app/application/index/view/public/footer.html
+++ b/app/application/index/view/public/footer.html
@@ -17,7 +17,7 @@
         <span class="mui-tab-label"><{:lang("footer_nav1")}></span>
     </a>
     <a class="mui-tab-item <{if $act == 'chat'}> mui-active <{/if}>" href="<{:url('chat/index')}>">
-    	<span class="mui-badge mui-badge-danger" style="position: absolute;right: 14px;z-index: 999;" id="msg_nums"><{$log_messages}></span>
+    	<span class="mui-badge mui-badge-danger" style="position: absolute;right: 14px;z-index: 999;display: none;" id="msg_nums">0</span>
         <span class="mui-icon tabbar-icon icon2"></span>
         <span class="mui-tab-label"><{:lang("footer_nav2")}></span>
     </a>
